src/objects/SWKIT_SalesModel_Relationship__c.object
<CustomObject>
    <description>From MotoPDM.. this is the list of relationships between SWKIT and SalesModel.. which SWKIT goes with what SalesModel, etc.</description>
    <fields>
        <fullName>Current_SWKIT_SM_Mapping__c</fullName>
        <label>Current SWKIT_SM_Mapping</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>PDM_External_ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PDM_Last_Mod__c</fullName>
        <label>PDM_Last_Mod</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SWKIT_Name__c</fullName>
        <label>SWKIT_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SW_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SW Kit</label>
        <referenceTo>SW_Kit__c</referenceTo>
        <relationshipLabel>SWKIT_SalesModel Relationships</relationshipLabel>
        <relationshipName>SWKIT_SalesModel_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesModelName__c</fullName>
        <formula>Sales_Model__r.Name</formula>
        <label>SalesModelName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesModel_Name__c</fullName>
        <label>SalesModel_Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Model</label>
        <referenceTo>Sales_Model__c</referenceTo>
        <relationshipLabel>SWKIT_SalesModel Relationships</relationshipLabel>
        <relationshipName>SWKIT_SalesModel_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SWKIT_SalesModel Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SWSM-{000000}</displayFormat>
        <label>SWKIT_SalesModel Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWKIT_SalesModel Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>